--- a/ACDClinicManagement.App/ACDClinicManagement.App.csproj
+++ b/ACDClinicManagement.App/ACDClinicManagement.App.csproj
@@ -72,7 +72,7 @@
     <ManifestKeyFile>ACDClinicManagement.App_TemporaryKey.pfx</ManifestKeyFile>
   </PropertyGroup>
   <PropertyGroup>
-    <GenerateManifests>true</GenerateManifests>
+    <GenerateManifests>false</GenerateManifests>
   </PropertyGroup>
   <PropertyGroup>
     <SignManifests>true</SignManifests>
